# meta-haptics-sdk

./: .gitmodules  Cargo.toml  README.md  justfile
core/dsp/: Cargo.toml  readme.md
core/dsp/src/: accumulator.rs  conversion.rs  delay.rs  envelope_follower.rs  float.rs  interpolation.rs  lib.rs  linspace.rs  rms.rs  spectral.rs  test_utils.rs
core/dsp/src/spectral/: features.rs  spectral_analyzer.rs  windows.rs
core/haptic_data/: Cargo.toml
core/haptic_data/src/: ahap.rs  breakpoint.rs  json.rs  lib.rs  parametric.rs  test_utils.rs  v1.rs  version.rs
core/haptic_data/test_files/: 16_points.ahap  17_points.ahap  2_points.ahap  3_points_continuous.ahap  invalid.ahap  invalid_empty_amplitude_envelope.haptic  invalid_freq_bp_outside_amp_env.haptic  invalid_single_amplitude_breakpoint.haptic  invalid_zero_duration.haptic  long_clip.ahap  long_clip.haptic  multiple_emphasis.ahap  multiple_emphasis.haptic  single_transient.ahap  studio_export.ahap  valid.ahap  valid_v1.ahap  valid_v1_continuous.ahap  valid_v1_transients.ahap
core/haptic_data_parametric/: CMakeLists.txt  README.md  justfile
core/haptic_data_parametric/include/parametric_haptic_data/: parametric_haptic_data.h
core/haptic_data_parametric/src/: CMakeLists.txt  parametric_haptic_data.cpp
core/haptic_data_parametric/tests/: CMakeLists.txt  parametric_haptic_data_test.cpp
core/renderer/: Cargo.toml  build.rs
core/renderer/src/: acf.rs  android_constant_intensity.rs  android_waveform.rs  continuous_oscillator_settings.rs  emphasis_oscillator_settings.rs  error.rs  haptic_file_renderer.rs  lib.rs  render_settings.rs  renderer_c.rs  streaming_event.rs  streaming_event_reader.rs  streaming_renderer.rs  test_utils.rs
core/renderer_c/: CMakeLists.txt  justfile
core/renderer_c/include/haptic_renderer/: continuous_oscillator.h  emphasis_oscillator.h  phasor.h  ramped_value.h  render_mode.h  renderer.h
core/renderer_c/src/: CMakeLists.txt  continuous_oscillator.c  emphasis_oscillator.c  phasor.c  ramped_value.c  renderer.c
core/renderer_c/tests/: CMakeLists.txt  test_continuous_oscillator.cpp  test_emphasis_oscillator.cpp  test_phasor.cpp  test_ramped_value.cpp
core/renderer_parametric/: .gitignore  CMakeLists.txt  README.md  justfile
core/renderer_parametric/include/parametric_haptic_renderer/: parametric_haptic_renderer.h
core/renderer_parametric/src/: CMakeLists.txt  parametric_haptic_renderer.cpp
core/renderer_parametric/tests/: CMakeLists.txt  parametric_haptic_renderer_test.cpp
interfaces/studio/: README.md  justfile
interfaces/studio/audio_analysis/: Cargo.toml  justfile
interfaces/studio/audio_analysis/src/: amplitude_analyzer.rs  audio_loading.rs  audio_preprocessing.rs  breakpoint_reduction.rs  emphasis_detection.rs  frequency_analyzer.rs  lib.rs  offline_analysis.rs  spectrum_analysis.rs  visual_waveform.rs
interfaces/studio/napi/: Cargo.toml  build.rs  justfile
interfaces/studio/napi/src/: audio_analysis.rs  audio_decoding.rs  haptic_data.rs  haptic_renderer.rs  helpers.rs  lib.rs
interfaces/unity/PCMHaptics/: PCMHaptics.cs  PCMHapticsFeature.cs  README.md
interfaces/unreal/PCMHaptics/: PCMHaptics.uplugin  README.md
interfaces/unreal/PCMHaptics/Source/PCMHaptics/: PCMHaptics.Build.cs
interfaces/unreal/PCMHaptics/Source/PCMHaptics/Private/: PCMHaptics.cpp
interfaces/unreal/PCMHaptics/Source/PCMHaptics/Public/: PCMHaptics.h
resources/: haptic-file-spec.md
resources/acf/: Generic-Console-PCM.acf  Generic-Console-SimpleHaptics.acf  MetaQuest.acf  README.md  template.acf
resources/images/haptic_file_spec/icons/: haptic-file-icon.icns
